Start to work on my readme file. Add images for readme. Fix the horizontal scroll on mobile version with width less than 350px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ body {
 
 .container {
     max-width: 1416px;
-    min-width: 355px;
+    min-width: 300px;
     margin: 0 auto;
     padding: 0 2rem;
 }
@@ -455,6 +455,13 @@ footer p {
     font-size: 12px;
     color: rgba(255, 255, 255, 0.5);
 }
+/* Add media queries for smallest mobile width(320px-350px) */
+@media screen and (max-width: 350px) {
+    .hero__title {
+        padding-top: 370px;
+    }
+}
+
 /* Tablet version */
 @media screen and (min-width: 768px) {
     html {
